--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -14,8 +14,16 @@
         position: absolute;
         right:  20px;
         padding: 16px 33px;
-        background: #fff;
+        background-color: #fff;
         border: 2px solid #000;
+        cursor: pointer;
+        color: #000;
+        font-size: 22px;
+        transition: .3s;
+        &:hover {
+            color: #fff;
+            background-color: #000;
+        }
     }
     &_info {
         position: absolute;
