--- a/src/components/panel/Panel.module.scss
+++ b/src/components/panel/Panel.module.scss
@@ -7,7 +7,12 @@
     background-color: #86d3f4;
     text-align: center;
         .panel_inner {
-            padding: 70px 50px;
+            padding: 0px 50px;
+            height: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
         .panel_title {
             font-size: 26px;
