--- a/src/components/input/Input.module.scss
+++ b/src/components/input/Input.module.scss
@@ -1,5 +1,6 @@
 .inputMask {
     font-size: 32px;
+    font-weight: 700;
     background: none;
     border: none;
     max-width: 270px;
@@ -8,4 +9,8 @@
     outline: none;
     cursor: pointer;
     margin: 13px 0px;
+}
+
+.inputMask.fail {
+    color: #ea0000;
 }
